samples/_failures_safe/1761359911_c3576c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c42c32ec.c: In function ‘main’:
./samples/SAFE/__tmp_c42c32ec.c:151:5: error: expected expression at end of input
  151 |     init_matrix(&
      |     ^~~~~~~~~~~
./samples/SAFE/__tmp_c42c32ec.c:151:5: error: expected declaration or statement at end of input
